[gd_scene load_steps=4 format=3 uid="uid://b62fid8isd6uy"]

[ext_resource type="Script" path="res://scripts/bullet.gd" id="1_ki6qw"]
[ext_resource type="Texture2D" uid="uid://cm8b2o76dl8yg" path="res://top-down-shooter/PNG/weapon_gun.png" id="1_v0n3b"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5oj1c"]
radius = 2.0

[node name="bullet" type="Area2D"]
script = ExtResource("1_ki6qw")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(4.47035e-08, -1.49012e-08)
scale = Vector2(0.221607, 0.4)
texture = ExtResource("1_v0n3b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_5oj1c")

[node name="KillTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="KillTimer" to="." method="_on_kill_timer_timeout"]
